--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "files.associations": {
-        "istream": "cpp"
+        "istream": "cpp",
+        "bitset": "cpp",
+        "functional": "cpp",
+        "iosfwd": "cpp",
+        "cstdio": "cpp"
     }
 }
