--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,6 @@ project(ExtendibleHashing)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(ExtendibleHashing main.cpp
+add_executable(ExtendibleHashing
         ExtendibleHashing.h
         ExtendibleHashing.cpp)
